# photino.Native

./: .clangd  .editorconfig  .gitignore  CMakeLists.txt  Directory.Build.props  Photino.Native.nuspec  README.md  makefile
.github/workflows/: debug-restructure.yml
Photino.Native/: Exports.cpp  Photino.Linux.cpp  Photino.Mac.UiDelegate.h  Photino.Mac.UiDelegate.mm  Photino.Mac.WebView.h  Photino.Mac.WebView.mm  Photino.Mac.WebViewDelegate.h  Photino.Mac.WebViewDelegate.mm  Photino.Mac.WindowDelegate.h  Photino.Mac.WindowDelegate.mm  Photino.Mac.mm  Photino.Native.vcxproj  Photino.Native.vcxproj.filters  Photino.Windows.cpp  Photino.h
Photino.Native/Platform/Windows/: Photino.DarkMode.cpp  Photino.cpp
Photino.Native/Platform/macOS/: Photino.AppDelegate.mm  Photino.NSWindowBorderless.h  Photino.NSWindowBorderless.mm  Photino.UiDelegate.h  Photino.UiDelegate.mm  Photino.UrlSchemeHandler.h  Photino.UrlSchemeHandler.mm  Photino.mm
Photino.Native/Shared/: Monitor.h  Photino.h
Photino.Native/include/platform/windows/: ToastHandler.h
Photino.Native/src/platform/linux/: Dialog.cpp  Photino.cpp
Photino.Native/src/platform/macos/: AppDelegate.mm  Dialog.mm  NSWindowBorderless.mm  Photino.mm  UiDelegate.mm  UrlSchemeHandler.mm
Photino.Native/src/platform/windows/: DarkMode.cpp  Dialog.cpp  Photino.cpp
Photino.Native/src/shared/: Exports.cpp
Photino.Test/: Photino.Test.csproj  Program.cs
Photino.Test/wwwroot/: main.html
